# cppcoursework_backup

./: CMakeLists.txt  README_MAC_LINUX.TXT  TODO.txt
.cache/clangd/index/: AnimatedImage.cpp.A706567F7F693AF5.idx  (+82 more)
debugbuild/: CMakeCache.txt  Makefile  SDL2_App  cmake_install.cmake
src/: BaseEngine.cpp  BouncingBall.h  BouncingBallMain.cpp  BouncingBallMain.h  CourseworkBase.vcxproj  CourseworkBase.vcxproj.filters  DemoAObject.hpp  DisplayableObject.h  DisplayableObjectContainer.h  DraggingDemo.cpp  DraggingDemo.h  DrawingSurface.cpp  ExampleDragableObjects.h  ExampleFilterPointClasses.h  ExampleObjects.h  FilterPoints.h  Follower.cpp  Follower.hpp  FontManager.cpp  ImageManager.h  ImageMappingDemo.cpp  ImageMappingDemo.h  ImagePixelMapping.h  MazeDemoMain.cpp  MazeDemoObject.cpp  MazeDemoObject.h  MyDemoA.cpp  MyDemoA.h  MyDemoTileManager.cpp  MyDemoTileManager.hpp  RawImageData.h  SimpleDemo.cpp  SimpleDemo.h  SimpleImage.cpp  SimpleImage.h  SpaceshipObject.cpp  StarfieldDemo.cpp  StarfieldDemo.h  TileManager.h  UtilCachedSimpleTrig.h  (+6 more)
src/Part2/: AnimatedImage.cpp  AnimatedImage.hpp  CollisionShape.hpp  CompoundDisplayableObject.hpp  Entity.cpp  Entity.hpp  EventHandler.hpp  ExtraDrawing.cpp  ExtraDrawing.hpp  FilterCamera.hpp  Form.cpp  Form.hpp  GameState.cpp  GameState.hpp  GlobalState.hpp  ImageMapScale.hpp  Inventory.cpp  Inventory.hpp  MiningGame.cpp  MiningGame.hpp  Player.cpp  Player.hpp  Settings.hpp  Slime.cpp  Slime.hpp  StateIngame.cpp  StateIngame.hpp  StateMainmenu.cpp  StateMainmenu.hpp  WorldGen.cpp  WorldGen.hpp  WorldTileManager.cpp  WorldTileManager.hpp
(+4 files in other folders)
